# Lynkr

./: .env  .env.example  .gitignore  .npmignore  BENCHMARK_REPORT.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  KRONAXIS_ANALYSIS.md  LICENSE  PLAN-per-client-model-routing.md  PLAN-routing-hardening.md  PLAN-worker-thread-pool.md  PRODUCT.md  README.md  benchmark-tier-routing.js  docker-compose.yml  final-test.js  funding.json  index.js  install.sh  litellm-autorouter-v2-llm.yaml  litellm-autorouter-v2.yaml  litellm-config.yaml  package-lock.json  package.json  test-parallel-agents.sh  test-parallel-direct.js  vercel-zero-substack-draft.md
.claude/: settings.local.json
.deepsec/: README.md  deepsec.config.ts  pnpm-lock.yaml
.github/: FUNDING.yml
.lynkr/: telemetry.db-shm  telemetry.db-wal
benchmark-configs/: litellm_config.yaml  lynkr.env  portkey-config.json  portkey-docker.sh
config/: difficulty-anchors.json  model-tiers.json  tool-whitelist-user.json.example
docs/: FEATURE_COMPLETE.md  agent-frameworks.md  benchmarking.md  docs-style.css  docs.html  fossunited-grant-application.md  headroom-auto-build.md  index.html  index.md  init.md  intent-window-routing.md  oauth-subscription-NOW-WORKING.md  oauth-subscription-routing.md  robots.txt  routerarena-benchmark.md  routing-improvement-plan.md  routing-intelligence.md  sitemap.xml  style.css  tool-calling-investigation-summary-2026-02-16.md  toon-integration-spec.md  wrap-guide.md  wrap-log-control.md  wrap-targets.md
documentation/: README.md  api.md  (+19 more)
native/: Cargo.toml  index.js
native/src/: lib.rs
(+419 files in other folders)
